--- a/style.css
+++ b/style.css
@@ -292,3 +292,11 @@ textarea{
 
 
 }
+@media only screen and (max-width: 768px ){
+    .btn{
+    
+ 
+        margin-left: 55px;
+        
+    }
+}
